--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ table {
 }
 
 th {
-    color: #FFFFFF;
+    color: #101550cc;
 }
 
 input {
@@ -30,40 +30,58 @@ input {
     padding: 5px;
     border-radius: 5px;
 }
+.Table{
+   height:100px;
+   width:500px;
+   padding-top: 20px;
+   margin-left:400px ;
+   margin-right: 150px;
+   margin-top: 10px;
+   background-color: rgba(240, 240, 240, 0.4);
+   color: #FFFFFF;
+   border-radius: 5px;
+   box-shadow: 0px 2px 7px rgba(16, 110, 203, 0.25);
+}
 
 .but {
     min-width: 120px;
     margin: 20px 10px;
     padding: 10px 10px;
     font-size: 20px;
-    background-color: rgba(25, 25, 26, 0.283);
+    background-color: rgba(218, 218, 245, 0.283);
     border-radius: 5px;
     border:none;
-    color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 7px rgba(12, 12, 12, 0.26);
-    font-weight: 600;
+    color: #101550cc;
+    box-shadow: 0px 1px 7px #101550cc;
+    font-weight: 700;
     cursor: pointer;
     transition: all 0.25s;
 }
 .but:hover{
-     box-shadow: 0 0 5px rgba(24,34,38,255), 0 0 0px rgba(24,34,38,255), 0 0 0px rgba(24,34,38,255), 0 0 50px rgba(24,34,38,255), 00 0px rgba(24,34,38,255);
+     box-shadow: 0 0 5px #101550cc, 0 0 0px #101550cc, 0 0 0px #101550cc, 0 0 50px #101550cc, 00 0px #101550cc;
 }
 
 .countdown {
     display: flex;
     justify-content: center;
+    background-color: rgba(240, 240, 240, 0.4);
+    margin-left: 200px;
+    margin-right: 200px;
+    border-radius: 5px;
+    padding-bottom: 8px;
 }
 
 .heading {
-    color: rgb(72, 149, 237);
+    color: #101550cc;
     font-size: 23px;
-    font-weight: 400;
+    font-weight: 600;
     text-transform: uppercase;
+
 }
 
 .time {
     background-color: rgba(240, 240, 240, 0.4);
-    color: #FFFFFF;
+    color: #101550cc;
     font-size: 100px;
     box-shadow: 0px 2px 7px rgba(16, 110, 203, 0.25);
     width: 150px;
@@ -134,7 +152,7 @@ input {
   }
 
   .heading1{
-    color: #FFFFFF;
+    color: #101550cc;
     width: 250px;
     margin-left: 495px;
     padding: 10px 10px;
@@ -142,7 +160,7 @@ input {
     background-color: rgba(182, 182, 201, 0.4);
     border-radius: 5px;
     border:none;
-    color: rgb(255, 255, 255);
+    color: #101550cc;
     box-shadow: 0px 1px 7px rgba(244, 244, 244, 0.25);
     font-weight: 600;
     cursor: pointer;}
@@ -154,7 +172,7 @@ input {
     <div class="full body">
         
           <h1>COUNTDOWN TIMER</h1>
-
+      <div class="Table">
         <table>
             <thead>
                 <tr>
@@ -169,9 +187,10 @@ input {
                 </tr>
             </tbody>
         </table>
-        <button class="but" id="calculate">Start</button>
-        <button class="but" id="stop">Stop</button>
-        <button class="but"id="reset">Reset</button>
+      </div>
+        <button class="but" id="calculate">START</button>
+        <button class="but" id="stop">STOP</button>
+        <button class="but"id="reset">RESET</button>
 
 
         <div class="countdown">
