--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ input {
    margin-left:400px ;
    margin-right: 150px;
    margin-top: 10px;
-   background-color: rgba(240, 240, 240, 0.4);
+   background-color:  rgba(240, 240, 240, 0.4);
    color: #FFFFFF;
    border-radius: 5px;
    box-shadow: 0px 2px 7px rgba(16, 110, 203, 0.25);
@@ -92,7 +92,7 @@ input {
 
 .full body {
     padding: 1rem 1rem;
-    margin: 0.5rem ;
+    margin: 0rem ;
     border-radius: 0.5rem;
     font-size: 2rem;
     background-color: black;
@@ -165,13 +165,28 @@ input {
     font-weight: 600;
     cursor: pointer;}
 
+    #ani{
+    background-image: linear-gradient(90deg,rgb(82, 82, 251),rgb(249, 102, 77));
+    background-clip: text;
+    color:transparent;
+    font-size: 100px;
+    animation-name: example;
+    animation-duration: 2s;
+    }
+    @keyframes example{
+      from{font-size: 100px;}
+      to{font-size:102px;}
+    }
+
 </style>
     </head>
 
     <body>
+    <div class="animate">
+        <h1 id="ani">COUNTDOWN TIMER</h1>
+    </div>  
     <div class="full body">
-        
-          <h1>COUNTDOWN TIMER</h1>
+
       <div class="Table">
         <table>
             <thead>
